# multilingual-amazon-reviews-fastembed-qdrant

./: .env  Example.txt  README.md  pyproject.toml  qdrant_ui.py  requirements.txt  test2.py
data/: data_reduce.py
src/: config.py  download_data.py  embed_and_ingest.py  qdrant_setup.py  query.py
